force-app/main/default/objects/OpportunityReviewSession__c/OpportunityReviewSession__c.object-meta.xml
<CustomObject>
    <label>Opportunity Review Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Review Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>