force-app/main/default/objects/OpportunityReviewSession__c/fields/Session_Result__c.field-meta.xml
<CustomField>
    <fullName>Session_Result__c</fullName>
    <label>Session Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>